--- a/ru/projects/obj.slim
+++ b/ru/projects/obj.slim
@@ -1,9 +1,9 @@
 article.project.obj
   .header.row.expanded
     h1.small-12.columns
-      | OBJ
+      | ОБЖ
     h4.small-12.columns
-      | Semen&nbsp;Katz / Nicolay&nbsp;Spesivtsev / Dzina&nbsp;Zhuk
+      | Дина&nbsp;Жук / Семен&nbsp;Кац / Николай&nbsp;Спесивцев
   .description.row.expanded
     .small-12.medium-6.large-6.columns
       p
