[platform-perplex] custom template for page

--- a/en/projects/platform-perplex.slim
+++ b/en/projects/platform-perplex.slim
@@ -1,24 +1,8 @@
 ---
 title: PLATFORM PERPLEX
 og_image_url: /images/platform-perplex/og-image.jpg
+template: templates/platform-perplex.slim
+soundcloud_id: "382518095%3Fsecret_token%3Ds-s8D0W"
 ---
 
-header.platform-perplex
-  .cover.under-bottom
-    | &nbsp;
-  .cover.bottom
-    | &nbsp;
-  .cover.top
-    | &nbsp;
-  .content
-    .credits
-      | photo by Adéla Vosičková
-
-
-section.platform-perplex
-  .section-row
-    article
-      iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/382518095%3Fsecret_token%3Ds-s8D0W&amp;color=%23ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true"
-  .section-row
-    article
-      = markdown(include_file "en/projects/_platform_perplex_poetry.md")
+= markdown(include_file "en/projects/_platform_perplex_poetry.md")
