--- a/templates/header.html
+++ b/templates/header.html
@@ -9,7 +9,7 @@ $endif$
 
 <title>EEEFFF.ORG - $title$</title>
 
-<link href="/css/app.css" rel="stylesheet" type="text/css"  />
+<link href="/css/app.css?$revision$" rel="stylesheet" type="text/css"  />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/motion-ui/1.1.1/motion-ui.min.css" />
 
 <script type="text/javascript" src="/js/vendor/jquery.js"></script>
@@ -23,4 +23,4 @@ $endif$
 <script type="text/javascript" src="/js/vendor/foundation.orbit.js"></script>
 <script type="text/javascript" src="/js/vendor/lodash.min.js"></script>
 <script type="text/javascript" src="/js/vendor/d3-queue.js"></script>
-<script type="text/javascript" src="/js/app.js"></script>
+<script type="text/javascript" src="/js/app.js?$revision$"></script>
