[dsgn] page specific menu and lang-switch design

--- a/css/_platform-perplex.scss
+++ b/css/_platform-perplex.scss
@@ -67,6 +67,16 @@
 //
 
 
+.back-to-home.platform-perplex,
+.lang-switch.platform-perplex {
+  color: gold;
+
+  &:hover {
+    text-shadow: 0.1vw -0.5vw blue;
+    color: gold;
+  }
+}
+
 //
 //
 // HEADER
