link to en kyiv podcast on soundcloud

--- a/en/projects/platform-perplex.slim
+++ b/en/projects/platform-perplex.slim
@@ -2,6 +2,6 @@
 title: PLATFORM PERPLEX
 og_image_url: /images/platform-perplex/og-image.jpg
 template: templates/platform-perplex.slim
-soundcloud_id: "382518095%3Fsecret_token%3Ds-s8D0W"
+soundcloud_id: "385978682"
 ---
 = markdown(include_file "en/projects/_platform_perplex_poetry.md")
