[documenta] files moved to /documenta

--- a/documenta/flcoop-documenta-04-borisenok.slim
+++ b/documenta/flcoop-documenta-04-borisenok.slim
@@ -1,3 +1,7 @@
+---
+hideMenu: true
+hideLangSwitch: true
+---
 article.project.flcoop-documenta
   .orbit data-orbit="true"
     .orbit-wrapper
@@ -11,14 +15,10 @@ article.project.flcoop-documenta
       ul.orbit-container
         li.orbit-slide.is-active
           figure.orbit-figure
-            img.orbit-image src="/images/flcoop-documenta-05-document-comment/masha-kotlyachkova/04.jpg" alt=""
+            img.orbit-image src="/images/flcoop-documenta-04-documents-chosen/P1000730.jpg" alt=""
         li.orbit-slide
           figure.orbit-figure
-            img.orbit-image src="/images/flcoop-documenta-05-document-comment/masha-kotlyachkova/05.jpg" alt=""
-        li.orbit-slide
-          figure.orbit-figure
-            img.orbit-image src="/images/flcoop-documenta-05-document-comment/masha-kotlyachkova/06.jpg" alt=""
+            img.orbit-image src="/images/flcoop-documenta-04-documents-chosen/P1000682.jpg" alt=""
     nav.orbit-bullets
       button.is-active data-slide="0"
       button data-slide="1"
-      button data-slide="2"
