--- a/documenta/flcoop-documenta-10-kotlyachkova-5.slim
+++ b/documenta/flcoop-documenta-10-kotlyachkova-5.slim
@@ -1,3 +1,7 @@
+---
+hideMenu: true
+hideLangSwitch: true
+---
 article.project.flcoop-documenta
   .orbit data-orbit="true"
     .orbit-wrapper
@@ -11,10 +15,10 @@ article.project.flcoop-documenta
       ul.orbit-container
         li.orbit-slide.is-active
           figure.orbit-figure
-            img.orbit-image src="/images/flcoop-documenta-05-document-comment/masha-kotlyachkova/01.jpg" alt=""
+            img.orbit-image src="/images/flcoop-documenta-05-document-comment/masha-kotlyachkova/10.jpg" alt=""
         li.orbit-slide
           figure.orbit-figure
-            img.orbit-image src="/images/flcoop-documenta-05-document-comment/masha-kotlyachkova/02.jpg" alt=""
+            img.orbit-image src="/images/flcoop-documenta-05-document-comment/masha-kotlyachkova/11.jpg" alt=""
     nav.orbit-bullets
       button.is-active data-slide="0"
       button data-slide="1"
