--- a/en/projects/platform-perplex.slim
+++ b/en/projects/platform-perplex.slim
@@ -3,5 +3,7 @@ title: PLATFORM PERPLEX
 og_image_url: /images/platform-perplex/og-image.jpg
 template: templates/platform-perplex.slim
 soundcloud_id: "385978682"
+description_1: "A session of emotional computations, radical intimacy and solidarity with drivers who are the workers of the platform economy"
+description_2: "Call uber 10-15 minutes before the session. Comfortable velor seat of an inexpensive foreign car, rented by a taxi driver is the best place to listen to the session. Enable audio recording. The session will last for 15 minutes."
 ---
-= markdown(include_file "en/projects/_platform_perplex_poetry.md")
+= markdown(include_file "en/projects/_platform_perplex_instructions.md")
