--- a/ru/projects/platform-perplex.slim
+++ b/ru/projects/platform-perplex.slim
@@ -2,7 +2,9 @@
 title: ПЕРПЛЕКС ПЛАТФОРМ
 og_image_url: /images/platform-perplex/og-image.jpg
 template: templates/platform-perplex.slim
-soundcloud_id: "382518095%3Fsecret_token%3Ds-s8D0W"
+soundcloud_id: "382518095"
+description_1: "Сеанс эмоциональных вычислений, радикальной интимности и солидарности с водителями убера – рабочими этой платформенной экономики"
+description_2: "Вызовите убер за 10-15 минут до начала сеанса. Удобные велюровые сиденья недорогой иномарки, взятой в аренду водителем такси – лучшее место для прослушивания сеанса. Включите аудиозапись. Сеанс продлится 15 минут."
 ---
 
-= markdown(include_file "ru/projects/_platform_perplex_poetry.md")
+= markdown(include_file "ru/projects/_platform_perplex_instructions.md")
