--- a/css/app.scss
+++ b/css/app.scss
@@ -115,6 +115,24 @@
   /*   url("type/filename.svg#filename") format("svg"); */
 }
 
+@font-face {
+  font-family: "AsimovOu";
+  src: url("../fonts/AsimovOu.otf");
+  /* src: local("☺"), */
+  /*   url("type/filename.woff") format("woff"), */
+  /*   url("type/filename.otf") format("opentype"), */
+  /*   url("type/filename.svg#filename") format("svg"); */
+}
+
+@font-face {
+  font-family: "InputMonoMedium";
+  src: url("../fonts/InputMono-Medium.ttf");
+  /* src: local("☺"), */
+  /*   url("type/filename.woff") format("woff"), */
+  /*   url("type/filename.otf") format("opentype"), */
+  /*   url("type/filename.svg#filename") format("svg"); */
+}
+
 
 
 @font-face {
@@ -190,7 +208,7 @@ body {
   color: blue;
   text-decoration: underline;
   z-index: 99;
-  opacity: 0.7;
+  // opacity: 0.7;
 
   @include breakpoint(medium) {
     font-size: 5vw;
