--- a/templates/platform-perplex.slim
+++ b/templates/platform-perplex.slim
@@ -6,11 +6,17 @@ header.platform-perplex
   .cover.top
     | &nbsp;
   .content
+    .description-1
+      | $description_1$
     .credits
       | photo by Adéla Vosičková
 
 
 section.platform-perplex
+  .section-row
+    article
+      p.instructions
+        | $description_2$
   .section-row
     article
       iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/$soundcloud_id$&amp;color=%23ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true"
