--- a/templates/header.html
+++ b/templates/header.html
@@ -24,3 +24,4 @@ $endif$
 <script type="text/javascript" src="/js/vendor/lodash.min.js"></script>
 <script type="text/javascript" src="/js/vendor/d3-queue.js"></script>
 <script type="text/javascript" src="/js/app.js?$revision$"></script>
+<script type="text/javascript" src="/js/compiled/main.js?$revision$"></script>
