[menu] added classses for menu

--- a/css/_menu.scss
+++ b/css/_menu.scss
@@ -1,4 +1,4 @@
-.main-app {
+#main-app {
   position: fixed;
   top: 0;
   left: 0;
@@ -9,5 +9,27 @@
 
   svg {
     @include absolute-center;
+
+    .link {
+      stroke: cyan;
+      stroke-width: 2;
+
+      &.tag {
+        stroke: red;
+      }
+    }
+
+    .node {
+      font-size: 200%;
+      font-family: monospace;
+      fill: grey;
+      text-decoration: underline dashed red;
+
+      &.active {
+        fill: blue;
+        text-decoration: underline solid blue;
+      }
+
+    }
   }
 }
