--- a/templates/default.html
+++ b/templates/default.html
@@ -21,7 +21,7 @@
     <a class="back-to-home $canonical_name$" href="$root_url$">𒑲</a>
     $endif$
 
-    <div class="main-app"></div>
+    <div id="main-app"></div>
     $body$
     <!-- <script type="text/javascript">
          jQuery(document).foundation();
