[cloud-bushes] added page, changed link on index page

--- a/templates/header.html
+++ b/templates/header.html
@@ -23,4 +23,6 @@ $endif$
 <script type="text/javascript" src="/js/vendor/foundation.orbit.js"></script>
 <script type="text/javascript" src="/js/vendor/lodash.min.js"></script>
 <script type="text/javascript" src="/js/vendor/d3-queue.js"></script>
+<script type="text/javascript" src="/js/vendor/webfontloader.js"></script>
+<script type="text/javascript" src="/js/vendor/bigtext.js"></script>
 <script type="text/javascript" src="/js/app.js?$revision$"></script>
