[templates] updated fields to latest w7w version, customHead feature

--- a/templates/header.html
+++ b/templates/header.html
@@ -9,6 +9,10 @@ $endif$
 
 <title>EEEFFF.ORG - $title$</title>
 
+$if(customHead)$
+$includeFile(customHead)$
+$endif$
+
 <link href="/css/app.css?$revision$" rel="stylesheet" type="text/css"  />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/motion-ui/1.1.1/motion-ui.min.css" />
 
