[engine] templates changed to meet new metadata field names

--- a/templates/default.html
+++ b/templates/default.html
@@ -11,14 +11,14 @@
 
     $if(hideLangSwitch)$
     $else$
-    <a class="lang-switch $canonical_name$" href="$other_lang_url$">
-      $other_lang$
+    <a class="lang-switch $canonicalName$" href="$otherLangUrl$">
+      $otherLang$
     </a>
     $endif$
 
     $if(hideMenu)$
     $else$
-    <a class="back-to-home $canonical_name$" href="$root_url$">𒑲</a>
+    <a class="back-to-home $canonicalName$" href="$root_url$">𒑲</a>
     $endif$
 
     <div id="main-app"></div>
