--- a/templates/default.html
+++ b/templates/default.html
@@ -21,14 +21,14 @@
     <a class="back-to-home $canonicalName$" href="$root_url$">𒑲</a>
     $endif$
 
-    <div id="main-app"></div>
+    <!-- <div id="main-app"></div> -->
     $body$
     <!-- <script type="text/javascript">
          jQuery(document).foundation();
          </script> -->
-    <script>
-     eeefff_org_website.core.init();
-    </script>
+    <!-- <script>
+         eeefff_org_website.core.init();
+         </script> -->
      <script>
      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
