--- a/css/app.scss
+++ b/css/app.scss
@@ -53,6 +53,8 @@
 
 @import "hackathon_choreography";
 
+@import "traffic_loop";
+
 /* @import "slick"; */
 /* @import "slick-theme"; */
 
@@ -230,17 +232,28 @@ body {
   top: 0;
   left: 0;
 
-  margin-top: -2vw;
-  font-size: 11vw;
-  line-height: 1;
-  // padding-left: 6vw;
-  color: blue;
-  text-decoration: none;
-  z-index: 99;
-  // opacity: 0.7;
+  width: 50px;
+  height: auto;
 
-  &:hover {
-    color: lightgray;
+  z-index: 9999999;
+
+  margin-top: 1rem;
+  margin-left: 1rem;
+
+  @include breakpoint(medium) {
+    width: 70px;
+  }
+
+  @include breakpoint(large) {
+    width: 100px;
+  }
+
+  svg #back-to-home {
+    fill: darkblue;
+
+    &:hover {
+      fill: lightgray;
+    }
   }
 }
 
