--- a/css/app.scss
+++ b/css/app.scss
@@ -1,8 +1,63 @@
 @charset 'utf-8';
 
 @import "app_settings";
-@import "foundation";
+// @import "foundation";
 // @import "motion-ui";
+
+// custom foundation;
+// Dependencies
+@import '../_vendor/normalize-scss/sass/normalize';
+@import '../_vendor/sassy-lists/stylesheets/helpers/missing-dependencies';
+@import '../_vendor/sassy-lists/stylesheets/helpers/true';
+@import '../_vendor/sassy-lists/stylesheets/functions/contain';
+@import '../_vendor/sassy-lists/stylesheets/functions/purge';
+@import '../_vendor/sassy-lists/stylesheets/functions/remove';
+@import '../_vendor/sassy-lists/stylesheets/functions/replace';
+@import '../_vendor/sassy-lists/stylesheets/functions/to-list';
+
+
+@import 'global';
+@import 'typography/typography';
+// Components
+@import 'grid/grid';
+// @import 'xy-grid/xy-grid';
+@import 'typography/typography';
+// @import 'forms/forms';
+@import 'components/visibility';
+@import 'components/float';
+// @import 'components/button';
+// @import 'components/button-group';
+// @import 'components/accordion-menu';
+// @import 'components/accordion';
+// @import 'components/badge';
+// @import 'components/breadcrumbs';
+// @import 'components/callout';
+// @import 'components/card';
+// @import 'components/close-button';
+// @import 'components/drilldown';
+// @import 'components/dropdown-menu';
+// @import 'components/dropdown';
+@import 'components/flex';
+@import 'components/responsive-embed';
+// @import 'components/label';
+@import 'components/media-object';
+// @import 'components/menu';
+// @import 'components/menu-icon';
+// @import 'components/off-canvas';
+@import 'components/orbit';
+// @import 'components/pagination';
+// @import 'components/progress-bar';
+// @import 'components/reveal';
+// @import 'components/slider';
+// @import 'components/sticky';
+// @import 'components/switch';
+// @import 'components/table';
+// @import 'components/tabs';
+// @import 'components/title-bar';
+// @import 'components/top-bar';
+// @import 'components/thumbnail';
+// @import 'components/tooltip';
+// @import 'prototype/prototype';
 
 // @include motion-ui-transitions;
 // @include motion-ui-animations;
@@ -11,15 +66,15 @@
 @include foundation-global-styles;
 @include foundation-grid;
 @include foundation-typography;
-@include foundation-button;
-@include foundation-forms;
+// @include foundation-button;
+// @include foundation-forms;
 @include foundation-visibility-classes;
 @include foundation-float-classes;
-@include foundation-dropdown;
-@include foundation-dropdown-menu;
-@include foundation-menu;
-@include foundation-sticky;
-@include foundation-top-bar;
+// @include foundation-dropdown;
+// @include foundation-dropdown-menu;
+// @include foundation-menu;
+// @include foundation-sticky;
+// @include foundation-top-bar;
 @include foundation-orbit;
 @include foundation-responsive-embed;
 
