--- a/templates/traffic-loop-layer-2.slim
+++ b/templates/traffic-loop-layer-2.slim
@@ -10,8 +10,7 @@ section.traffic-loop.layer-2.user
   .bkg.blue
     | &nbsp;
 
-  .overlay.show-for-medium
-    .video-container
+  .show-for-medium.video-container
       .video
         <iframe width="560" height="315" src="https://www.youtube.com/embed/$youtubeVideoId$" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   article
