--- a/templates/traffic-loop-nav.slim
+++ b/templates/traffic-loop-nav.slim
@@ -1,44 +1,72 @@
 <svg class="tl-clipping-masks" width="0" height="0">
+<defs>
+<g id="g-path-1">
+    <polygon id="path-1" class="st0" points="76,0 132.1,10.9 150,79.2 94.1,224.9 0,165.9 0,92.9 44,165.9 31.2,86.8 64.3,86.8  "/>
+</g>
+
+<g id="g-path-2">
+    <polygon id="path-2" class="st0" points="57,0 97.2,45 127.6,111.7 97.2,148.3 136.9,199.3 24,224.9 0,170.6 39,99.5 63.1,87.4"/>
+</g>
+
+<g id="g-path-3">
+    <polygon id="path-3" class="st0" points="87.9,10 106.7,84.5 150,118.9 140.9,208 93.4,146.8 29.6,183 17.6,84.5 0,10 50,40.7  "/>
+</g>
+
+<filter id="blur" x="-2.5" y="-2.5" width="500%" height="500%">
+  <feGaussianBlur result="blurOut" in="SourceGraphic" stdDeviation="12" />
+  <feBlend in="SourceGraphic" in2="blurOut" mode="normal" />
+</filter>
+</defs>
+
   <clipPath id="clipPolygon-1">
     <polygon id="path-1" class="st0" points="76,0 132.1,10.9 150,79.2 94.1,224.9 0,165.9 0,92.9 44,165.9 31.2,86.8 64.3,86.8  "/>
   </clipPath>
 
+  / <clipPath id="clipPolygon-2">
+  /   <polygon id="path-2" class="st0" points="29.3,0 49.7,52.4 124.7,115.3 150,186.1 150,218.6 56.1,171.7 20.4,141.1 0,104.3 0,3.4
+  /   6.6,27.6  "/>
+  / </clipPath>
+
   <clipPath id="clipPolygon-2">
-    <polygon id="path-2" class="st0" points="29.3,0 49.7,52.4 124.7,115.3 150,186.1 150,218.6 56.1,171.7 20.4,141.1 0,104.3 0,3.4
-    6.6,27.6  "/>
+    <polygon id="path-2" class="st0" points="57,0 97.2,45 127.6,111.7 97.2,148.3 136.9,199.3 24,224.9 0,170.6 39,99.5 63.1,87.4"/>
   </clipPath>
 
   <clipPath id="clipPolygon-3">
-    <polygon id="path-3" class="st0" points="57,0 97.2,45 127.6,111.7 97.2,148.3 136.9,199.3 24,224.9 0,170.6 39,99.5 63.1,87.4"/>
-  </clipPath>
-
-  <clipPath id="clipPolygon-4">
-    <polygon id="path-4" class="st0" points="87.9,10 106.7,84.5 150,118.9 140.9,208 93.4,146.8 29.6,183 17.6,84.5 0,10 50,40.7  "/>
+    <polygon id="path-3" class="st0" points="87.9,10 106.7,84.5 150,118.9 140.9,208 93.4,146.8 29.6,183 17.6,84.5 0,10 50,40.7  "/>
   </clipPath>
 
 </svg>
 
 a.nav.traffic-loop href="traffic-loop-1.html"
   .shadow.nav-el.nav-1
-    | &nbsp;
+    <svg viewBox="-25 -25 200 275">
+      <use xlink:href="#g-path-1" filter="url(#blur)"/>
+    </svg>
   .hover.nav-el.nav-1
     | &nbsp;
-  img.nav-el.nav-1 src="/images/traffic-loop/nav/nav-1.jpg"
+  .nav-el.nav-1
+    img.nav-1 src="/images/traffic-loop/nav/nav-1.jpg"
 a.nav.traffic-loop href="traffic-loop-2.html"
   .shadow.nav-el.nav-2
-    | &nbsp;
+    <svg viewBox="-25 -25 200 275">
+      <use xlink:href="#g-path-2" filter="url(#blur)"/>
+    </svg>
   .hover.nav-el.nav-2
     | &nbsp;
-  img.nav-el.nav-2 src="/images/traffic-loop/nav/nav-2.jpg"
+  .nav-el.nav-2
+    img.nav-2 src="/images/traffic-loop/nav/nav-2.jpg"
 a.nav.traffic-loop href="traffic-loop-3.html"
   .shadow.nav-el.nav-3
-    | &nbsp;
+    <svg viewBox="-25 -25 200 275">
+      <use xlink:href="#g-path-3" filter="url(#blur)"/>
+    </svg>
   .hover.nav-el.nav-3
     | &nbsp;
-  img.nav-el.nav-3 src="/images/traffic-loop/nav/nav-3.jpg"
-a.nav.traffic-loop href="traffic-loop-4.html"
-  .shadow.nav-el.nav-4
-    | &nbsp;
-  .hover.nav-el.nav-4
-    | &nbsp;
-  img.nav-el.nav-3 class="nav-4" src="/images/traffic-loop/nav/nav-4.jpg"
+  .nav-el.nav-3
+    img.nav-3 src="/images/traffic-loop/nav/nav-3.jpg"
+/ a.nav.traffic-loop href="traffic-loop-4.html"
+/   .shadow.nav-el.nav-4
+/     | &nbsp;
+/   .hover.nav-el.nav-4
+/     | &nbsp;
+/   img.nav-el.nav-3 class="nav-4" src="/images/traffic-loop/nav/nav-4.jpg"
