--- a/css/_traffic_loop.scss
+++ b/css/_traffic_loop.scss
@@ -58,7 +58,7 @@
 }
 
 @mixin normal-text {
-  font-size: 12px;
+  font-size: 16px;
 
   @include breakpoint(medium) {
     font-size: 18px;
@@ -391,7 +391,8 @@ section.traffic-loop {
       }
 
       img {
-        box-shadow: 0.3rem 0.3rem 0px white;
+        // box-shadow: 0.3rem 0.3rem 0px white;
+        box-shadow: 0rem 0rem 30px blue;
 
         @include breakpoint(medium) {
           box-shadow: 0rem 0rem 30px blue;
