[ef] added page

--- a/templates/error-friendly-networks.slim
+++ b/templates/error-friendly-networks.slim
@@ -1,7 +1,3 @@
-section.error-friendly-networks data-equalizer="aaa" data-equalize-by-row="true"
-  header data-equalizer-watch="aaa"
-    h1
-      | $title$
-
-  article data-equalizer="aaa"
+section.error-friendly-networks
+  article
     | $body$
