--- a/css/_error-friendly-networks.scss
+++ b/css/_error-friendly-networks.scss
@@ -8,7 +8,154 @@ a.lang-switch.error-friendly-networks {
 //
 //
 
+
 section.error-friendly-networks {
+  // width: 100%;
+  // min-width: 100%;
+  @extend .row;
+  @extend .expanded;
+
+  background-color: #F8F9FA;
+
+  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+  color: black;
+  letter-spacing: 0px;
+
+  @include breakpoint(medium) {
+    background-image: url(/images/error-friendly-networks/out-640.gif);
+  }
+
+  article {
+    @extend .row;
+
+    @extend .small-12;
+    @extend .medium-8;
+    @extend .large-6;
+
+    @extend .medium-offset-2;
+    @extend .large-offset-3;
+
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+
+
+
+    // @extend .expanded;
+    background-color: cyan;
+    box-shadow: 0px 0px 3px 0px black;
+  }
+
+  p,
+  h1,
+  h2 {
+    @extend .small-12;
+  }
+
+  a {
+    font-family: inherit;
+    color: darkmagenta;
+    text-decoration: underline;
+    text-transform: none;
+    letter-spacing: 0px;
+    font-weight: bold;
+
+    &:hover {
+      color: white;
+      text-decoration: line-through;
+    }
+  }
+
+  h1 {
+    font-family: inherit;
+    font-size: 1.5rem;
+    font-style: normal;
+    line-height: inherit;
+    font-weight: bold;
+    text-transform: none;
+
+    em,
+    span.em-line-through {
+      color: white;
+      font-style: normal;
+      font-weight: bold;
+    }
+
+    span.em-line-through {
+      text-decoration: line-through;
+    }
+  }
+
+  h2 {
+    font-family: inherit;
+    font-size: 1.2rem;
+    font-style: normal;
+    line-height: inherit;
+    font-weight: bold;
+    text-transform: none;
+
+    background-color: magenta;
+
+    position: relative;
+    overflow: hidden;
+    z-index: 0;
+
+    &:before {
+      content: "░░░░░";
+    }
+
+    &:after {
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: -1;
+      content: "░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░";
+    }
+
+    em {
+      color: white;
+      font-style: normal;
+      font-weight: bold;
+      background-color: magenta;
+      z-index: 1;
+    }
+  }
+
+  h3 {
+    font-size: 1.2rem;
+    font-style: normal;
+    line-height: inherit;
+    font-weight: bold;
+    text-transform: none;
+    // background-color: magenta;
+    font-family: inherit;
+    color: fuchsia;
+  }
+
+  p {
+    font-size: 16px;
+  }
+
+  figure {
+    margin-bottom: 1rem;
+
+    img {
+      border: 3px solid magenta;
+    }
+
+    figcaption {
+      background-color: fuchsia;
+      color: white;
+      font-weight: bold;
+      padding-left: 3px;
+      padding-right: 3px;
+    }
+  }
+}
+
+section.error-friendly-networks-teaser {
   @extend .row;
   @extend .expanded;
 
@@ -37,7 +184,7 @@ section.error-friendly-networks {
     padding: 0;
   }
 }
-section.error-friendly-networks header {
+section.error-friendly-networks-teaser header {
     @extend .large-6;
     @extend .medium-8;
     @extend .small-12;
@@ -51,7 +198,7 @@ section.error-friendly-networks header {
 // CONTENT
 //
 //
-section.error-friendly-networks article {
+section.error-friendly-networks-teaser article {
   // @extend .row;
   // @extend .expanded;
     @extend .small-12;
