--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,14 @@
 <article class="index">
-  <header class="teaser">
-    <h1 class="">
-      EEEFFF.ORG
+  <header>
+    <h1>
+      <a href="/$lang$/about.html">
+        $aboutLabel$
+      </a>
     </h1>
   </header>
 
-  <section class="toc-wrapper hidden">
-    <ul class="toc">
+  <section class="toc">
+    <ul>
       $body$
     </ul>
   </section>
