--- a/css/_index.scss
+++ b/css/_index.scss
@@ -4,12 +4,41 @@
 
 article.index {
   position: relative;
+  margin-left: 1rem;
+  margin-right: 1rem;
 
-  height: 100%;
-  min-height: 100%;
+  a {
+    color: blue;
+    text-decoration: underline;
 
-  background-color: #8F878F;
-  background-color: #D7C1D7;
+    &:hover {
+      color: red;
+      text-decoration: line-through;
+    }
+  }
+
+  header h1 {
+    font-size: 2rem;
+
+    @include breakpoint(medium) {
+      font-size: 4rem;
+    }
+  }
+
+  section.toc {
+    ul {
+      list-style-type: none;
+      margin-left: 0;
+    }
+
+    li {
+      margin-bottom: 0.75rem;
+
+      &.new a {
+        background-color: yellow;
+      }
+    }
+  }
 }
 
 .teaser {
@@ -89,22 +118,24 @@ section.toc-wrapper {
 }
 
 section.contact-email {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  // margin-right: rem-calc(20px);
-  z-index: 99;
+
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+  text-align: right;
+  width: 100%;
 
   a {
     text-transform: none;
-  //   color: blue;
-
-  //   &:hover {
-  //     color: pink;
-  //   }
-
-  //   @include breakpoint(medium) {
-  //     color: black;
-  //   }
   }
+
+  @include breakpoint(medium) {
+    margin-top: 0;
+    margin-bottom: 0;
+
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    z-index: 99;
+  }
+
 }
