--- a/templates/prepare-to-synchronize.slim
+++ b/templates/prepare-to-synchronize.slim
@@ -1,6 +1,7 @@
+
+iframe.prepare-to-synchronize-model-iframe src="prepare-to-synchronize-model.html"
+
 section.prepare-to-synchronize
-  .scene
-    x-model src="/images/synchronisation/blobby-torus_2-cleaned-2.gltf"
   
   article.prepare-to-synchronize
     figure.head-pictures
@@ -9,9 +10,3 @@ section.prepare-to-synchronize
     | $body$
     figure
       img src='$pictureUrl("02.jpg")$'
-
-
-  script type="text/javascript" src="/js/vendor/three.min.js"
-  script type="text/javascript" src="/js/vendor/GLTFLoader.js"        
-  script type="text/javascript" src="/js/vendor/model-element.min.js"
-      
