[projects] add recent projects and layouts or them

--- a/css/_index.scss
+++ b/css/_index.scss
@@ -37,6 +37,10 @@ article.index {
       &.new a {
         background-color: yellow;
       }
+
+      &.text a {
+        font-family: "AsimovOu";
+      }
     }
   }
 }
