--- a/css/app.scss
+++ b/css/app.scss
@@ -122,6 +122,8 @@
 
 @import "about";
 
+@import "pdf-text";
+
 @import "cat_scout";
 
 @import "psychodata";
@@ -157,6 +159,8 @@
 @import "synchronisation";
 
 @import "automated-recreation-zone";
+
+@import "kapital-perplexed-species-manifesto";
 
 /* @import "slick"; */
 /* @import "slick-theme"; */
