--- a/css/_psychodata.scss
+++ b/css/_psychodata.scss
@@ -1,11 +1,20 @@
-.project.psychodata {
+section.psychodata {
    /* background-image: url("/images/psychodata/bg.png"); */
    /* background-size: cover; */
    /* background-position: 50% 50%; */
 
-  .header h1 {
-    text-shadow: 0.5vw 0.5vw rgb(165, 153, 16);
-    font-size: 10vw;
+  h1 {
+    color: white;
+
+    color: white;
+    text-shadow: 0.2rem 0.2rem aqua;
+    font-size: 2rem;
+
+    @include breakpoint(medium) {
+      text-shadow: 0.5rem 0.5rem aqua;
+      font-size: 4rem;
+    }
+
   }
 
   .media {
