[projects] add holed futurism basic docs with pdf files

--- a/en/index.slim
+++ b/en/index.slim
@@ -4,18 +4,21 @@ aboutLabel: "ABOUT EEEFFF"
 template: "templates/index.html"
 ---
 li.new
+  a href="/en/projects/holed-futurism.html"
+    | Holed Futurism
+li
   a href="/en/projects/error-friendly-networks.html"
     | error-friendly networks
 
-li.new
+li
   a href="/en/projects/traffic-loop-1.html"
     | Traffic Loop
 
-li.new
+li
   a href="/en/projects/prepare-to-synchronize.html"
     | Prepare to Synchronize
 
-li.new
+li
   a href="/en/projects/automated-recreation-zone.html"
     | Automated Recreation Zone
 
@@ -31,19 +34,19 @@ li
   a href="/en/projects/hackathon-choreography.html"
     | Hackathon Horeography
 
-li.new
+li
   a href="/en/projects/kapital-perplexed-species-manifesto.html"
     | Perplexed Species / a visual intervention into Kapitál newspaper (en, sk)
 
-li.text.new
+li.text
   a href="/en/projects/smart-for-whom.html"
     | Smart for Whom?
 
-li.text.new
+li.text
   a href="/en/projects/programmers-wanna-be.html"
     | Programmers Wanna Be
 
-li.text.new
+li.text
   a href="/en/projects/human-works-as-human-in-the-age-of-machine-learning.html"
     | Human works as human in the age of machine learning (ru)
 
