--- a/ru/index.slim
+++ b/ru/index.slim
@@ -5,19 +5,23 @@ template: "templates/index.html"
 ---
 
 li.new
+  a href="/ru/projects/holed-futurism.html"
+    | Дырявый Футуризм
+
+li
   a href="/ru/projects/error-friendly-networks.html"
     | сети, дружелюбные к ошибкам
 
-li.new
+li
   a href="/ru/projects/traffic-loop-1.html"
     | Трафик Луп
 
-li.new
+li
   a href="/ru/projects/prepare-to-synchronize.html"
     | ПРИГОТОВЬТЕСЬ К СИНХРОНИЗАЦИИ
 
 
-li.new
+li
   a href="/ru/projects/automated-recreation-zone.html"
     | Автоматическая Рекреационная Зона
 
@@ -33,19 +37,19 @@ li
   a href="/ru/projects/hackathon-choreography.html"
     | Хореография Хакатона
 
-li.new
+li
   a href="/ru/projects/kapital-perplexed-species-manifesto.html"
     | Существа в замешательстве / интервенция в газету Kapitál (en, sk)
 
-li.text.new
+li.text
   a href="/ru/projects/smart-for-whom.html"
     | Smart for Whom? (en)
 
-li.text.new
+li.text
   a href="/ru/projects/programmers-wanna-be.html"
     | Программисты wanna-be (en)
 
-li.text.new
+li.text
   a href="/ru/projects/human-works-as-human-in-the-age-of-machine-learning.html"
     | Человек, работающий человеком в эпоху машинного обучения
 
