--- a/templates/default.html
+++ b/templates/default.html
@@ -40,9 +40,9 @@
     <!-- <script type="text/javascript">
          jQuery(document).foundation();
          </script> -->
-    <!-- <script>
+    <script>
          eeefff_org_website.core.init();
-         </script> -->
+    </script>
      <script>
      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
