--- a/templates/header.html
+++ b/templates/header.html
@@ -19,6 +19,7 @@ $endif$
 <script type="text/javascript" src="/js/vendor/jquery.js"></script>
 <script type="text/javascript" src="/js/vendor/jquery.mobile.custom.min.js"></script>
 <script type="text/javascript" src="/js/vendor/jquery.visible.min.js"></script>
+<script type="text/javascript" src="/js/vendor/jquery-deepest.js"></script>
 <script type="text/javascript" src="/js/vendor/modernizr.js"></script>
 <script type="text/javascript" src="/js/vendor/mobile-detect.min.js"></script>
 <script type="text/javascript" src="/js/vendor/mobile-detect-modernizr.js"></script>
