[projects] added mystery-covered-with-the-darkness

--- a/css/app.scss
+++ b/css/app.scss
@@ -152,6 +152,8 @@
 
 @import "error-friendly-networks";
 
+@import "mystery-covered-with-the-darkness";
+
 @import "traffic_loop";
 
 @import "prepare-to-synchronize";
