--- a/css/app.scss
+++ b/css/app.scss
@@ -162,6 +162,8 @@
 
 @import "kapital-perplexed-species-manifesto";
 
+@import "subtitles-test";
+
 /* @import "slick"; */
 /* @import "slick-theme"; */
 
