--- a/css/app.scss
+++ b/css/app.scss
@@ -1,26 +1,38 @@
 @charset 'utf-8';
 
 @import "app_settings";
-// @import "foundation";
+@import "foundation";
 // @import "motion-ui";
+
 
 // custom foundation;
 // Dependencies
-@import '../_vendor/normalize-scss/sass/normalize';
-@import '../_vendor/sassy-lists/stylesheets/helpers/missing-dependencies';
-@import '../_vendor/sassy-lists/stylesheets/helpers/true';
-@import '../_vendor/sassy-lists/stylesheets/functions/contain';
-@import '../_vendor/sassy-lists/stylesheets/functions/purge';
-@import '../_vendor/sassy-lists/stylesheets/functions/remove';
-@import '../_vendor/sassy-lists/stylesheets/functions/replace';
-@import '../_vendor/sassy-lists/stylesheets/functions/to-list';
+// @import '../_vendor/normalize-scss/normalize';
+// @import '../_vendor/sassy-lists/stylesheets/helpers/missing-dependencies';
+// @import '../_vendor/sassy-lists/stylesheets/helpers/true';
+// @import '../_vendor/sassy-lists/stylesheets/functions/contain';
+// @import '../_vendor/sassy-lists/stylesheets/functions/purge';
+// @import '../_vendor/sassy-lists/stylesheets/functions/remove';
+// @import '../_vendor/sassy-lists/stylesheets/functions/replace';
+// @import '../_vendor/sassy-lists/stylesheets/functions/to-list';
 
 
 @import 'global';
 @import 'typography/typography';
 // Components
+
+//
+// grids
+//
 @import 'grid/grid';
+
+
+// USE XY GRID
 @import 'xy-grid/xy-grid';
+
+// @include foundation-flex-classes;
+// @include foundation-flex-grid;
+
 @import 'typography/typography';
 // @import 'forms/forms';
 @import 'components/visibility';
@@ -78,6 +90,12 @@
 @include foundation-orbit;
 @include foundation-responsive-embed;
 
+
+//
+//
+// SETUP XY GRID
+//
+//
 @include foundation-xy-grid-classes(
   $base-grid: true,
   $margin-grid: true,
