--- a/css/app.scss
+++ b/css/app.scss
@@ -1,19 +1,19 @@
 @charset 'utf-8';
 
 @import "app_settings";
-// @import "foundation";
+@import "foundation";
 // @import "motion-ui";
 
 // custom foundation;
 // Dependencies
-@import '../_vendor/normalize-scss/sass/normalize';
-@import '../_vendor/sassy-lists/stylesheets/helpers/missing-dependencies';
-@import '../_vendor/sassy-lists/stylesheets/helpers/true';
-@import '../_vendor/sassy-lists/stylesheets/functions/contain';
-@import '../_vendor/sassy-lists/stylesheets/functions/purge';
-@import '../_vendor/sassy-lists/stylesheets/functions/remove';
-@import '../_vendor/sassy-lists/stylesheets/functions/replace';
-@import '../_vendor/sassy-lists/stylesheets/functions/to-list';
+// @import '../_vendor/normalize-scss/sass/normalize';
+// @import '../_vendor/sassy-lists/stylesheets/helpers/missing-dependencies';
+// @import '../_vendor/sassy-lists/stylesheets/helpers/true';
+// @import '../_vendor/sassy-lists/stylesheets/functions/contain';
+// @import '../_vendor/sassy-lists/stylesheets/functions/purge';
+// @import '../_vendor/sassy-lists/stylesheets/functions/remove';
+// @import '../_vendor/sassy-lists/stylesheets/functions/replace';
+// @import '../_vendor/sassy-lists/stylesheets/functions/to-list';
 
 
 @import 'global';
