--- a/css/erosion-machine-timeline.scss
+++ b/css/erosion-machine-timeline.scss
@@ -17,8 +17,29 @@
     height: 300px;
   }
 
+
+  &.erosion-video {
+    width: 640px;
+    height: 380px;
+  }
+
+  &.erosion-text {
+    width: 70vw;
+    height: auto;
+  }
+
+  &.outsourcing-orgy {
+    font-size: 120px;
+    color: red;
+  }
+
+  &.spinner-video {
+    text-shadow: 0 0 20px gold;
+  }
+
+
   &.no-name-outsourcers-01,
-  &.no-name-outsourcers-02 {
+  &.no-name-outsourcers-02-text {
     font-size: 89px;
     color: #00F3FF;
     text-shadow: 0 1px 40px #FF0000;
